components/kafka-streaming-service/manifests/kafka-streaming-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: kafka-streaming-service
  labels:
    camel.apache.org/generation: '1'
    camel.apache.org/integration: kafka-streaming-service
    camel.apache.org/service.type: user
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    camel.apache.org/integration: kafka-streaming-service
  type: ClusterIP
  sessionAffinity: None
